add risk analysis demo

--- a/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
+++ b/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
@@ -123,15 +123,11 @@
       "* Organization names: Microsoft Corp, OpenAI, Reuters\n",
       "* Organization industries: Technology, News Media\n",
       "* People\n",
-      "    * Name: Sam Altman\n",
-      "    * Organization: OpenAI\n",
-      "    * Name: Peter Thiel\n",
-      "    * Organization: OpenAI\n",
-      "    * Name: Reid Hoffman\n",
-      "    * Organization: LinkedIn\n",
+      " * Name: Sam Altman, Peter Thiel, Reid Hoffman, Stephen Nellis, Peter Cooney\n",
+      " * Organization: OpenAI, LinkedIn, Reuters\n",
       "* Events\n",
       "    * Event name: Microsoft's investment in OpenAI\n",
-      "    * Event date and/or time: Monday (exact date not specified)\n",
+      "    * Event date and/or time: Not specified\n",
       "    * Event location: San Francisco\n"
      ]
     }
@@ -329,9 +325,9 @@
       "text/markdown": [
        "### Relationship between People and Organization\n",
        "\n",
-       "In this case, the organizations involved are Microsoft Corp and OpenAI. Microsoft Corp is a technology company that announced a $1 billion investment in OpenAI, an artificial intelligence company based in San Francisco. \n",
+       "In this case, we have two organizations involved: Microsoft Corp and OpenAI. Microsoft Corp is a technology company that announced a $1 billion investment in OpenAI, a San Francisco-based company focusing on artificial intelligence.\n",
        "\n",
-       "The people mentioned in the case are Sam Altman, Peter Thiel, and Reid Hoffman, who are all associated with OpenAI. \n",
+       "Three individuals are mentioned in the case: Sam Altman, Peter Thiel, and Reid Hoffman. All three are associated with OpenAI.\n",
        "\n",
        "The relationship can be visualized as follows:\n",
        "\n",
@@ -346,11 +342,13 @@
        "\n",
        "### Classification of the Case\n",
        "\n",
-       "This case does not present any potential compliance issues. The event described is a business investment by Microsoft Corp in OpenAI. There is no mention of any illegal activities, bribery, or corruption related to this investment. \n",
+       "This case does not appear to involve any anti-bribery or anti-corruption issues. The event described is a legitimate business transaction: an investment by Microsoft Corp in OpenAI to develop artificial intelligence technologies. There is no indication of any illicit activities or violations of compliance regulations.\n",
        "\n",
        "### Results\n",
        "\n",
-       "Risk level: 0/10 (No risk)"
+       "Risk level: 0/10\n",
+       "\n",
+       "This case does not present a compliance issue."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -395,32 +393,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidRequestError",
-     "evalue": "5.0 is greater than the maximum of 2 - 'temperature'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidRequestError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\hyssh\\workspace\\openai-demo\\quickstart-learnfast\\web-scraping\\web-scraping.ipynb Cell 11\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssh/workspace/openai-demo/quickstart-learnfast/web-scraping/web-scraping.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m user_msg4 \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mrole\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39muser\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m\"\u001b[39m:user_prompt3\u001b[39m.\u001b[39mreplace(\u001b[39m\"\u001b[39m\u001b[39m{{\u001b[39m\u001b[39mcase_data}}\u001b[39m\u001b[39m\"\u001b[39m, sample_case)}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssh/workspace/openai-demo/quickstart-learnfast/web-scraping/web-scraping.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m prompt4 \u001b[39m=\u001b[39m [system_msg4, user_msg4]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/hyssh/workspace/openai-demo/quickstart-learnfast/web-scraping/web-scraping.ipynb#X22sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m res4 \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39;49mrun(prompt4, temperature\u001b[39m=\u001b[39;49m\u001b[39m5.0\u001b[39;49m, max_tokens\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m, top_p\u001b[39m=\u001b[39;49m\u001b[39m0.0\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/hyssh/workspace/openai-demo/quickstart-learnfast/web-scraping/web-scraping.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m display(Markdown(res4))\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\workspace\\openai-demo\\quickstart-learnfast\\web-scraping\\demo_utils.py:28\u001b[0m, in \u001b[0;36mdemo_utils.run\u001b[1;34m(self, prompt, temperature, max_tokens, top_p, frequency_penalty, presence_penalty, stop, isRaw)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrun\u001b[39m(\u001b[39mself\u001b[39m, prompt, temperature: \u001b[39mfloat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m, max_tokens: \u001b[39mint\u001b[39m\u001b[39m=\u001b[39m\u001b[39m500\u001b[39m, \n\u001b[0;32m     23\u001b[0m              top_p: \u001b[39mfloat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m, \n\u001b[0;32m     24\u001b[0m              frequency_penalty: \u001b[39mfloat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m0.0\u001b[39m, \n\u001b[0;32m     25\u001b[0m              presence_penalty: \u001b[39mfloat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m0.0\u001b[39m,\n\u001b[0;32m     26\u001b[0m              stop: \u001b[39mlist\u001b[39m\u001b[39m=\u001b[39m[],\n\u001b[0;32m     27\u001b[0m              isRaw: \u001b[39mbool\u001b[39m\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m---> 28\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mopenai\u001b[39m.\u001b[39;49mChatCompletion\u001b[39m.\u001b[39;49mcreate(\n\u001b[0;32m     29\u001b[0m         engine\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine,\n\u001b[0;32m     30\u001b[0m         messages\u001b[39m=\u001b[39;49mprompt,\n\u001b[0;32m     31\u001b[0m         temperature\u001b[39m=\u001b[39;49mtemperature,\n\u001b[0;32m     32\u001b[0m         max_tokens\u001b[39m=\u001b[39;49mmax_tokens,\n\u001b[0;32m     33\u001b[0m         top_p\u001b[39m=\u001b[39;49mtop_p,\n\u001b[0;32m     34\u001b[0m         frequency_penalty\u001b[39m=\u001b[39;49mfrequency_penalty,\n\u001b[0;32m     35\u001b[0m         presence_penalty\u001b[39m=\u001b[39;49mpresence_penalty,\n\u001b[0;32m     36\u001b[0m         stop\u001b[39m=\u001b[39;49mstop\n\u001b[0;32m     37\u001b[0m     )\n\u001b[0;32m     39\u001b[0m     \u001b[39mif\u001b[39;00m isRaw:\n\u001b[0;32m     40\u001b[0m         \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\AppData\\Local\\anaconda3\\envs\\openai\\lib\\site-packages\\openai\\api_resources\\chat_completion.py:25\u001b[0m, in \u001b[0;36mChatCompletion.create\u001b[1;34m(cls, *args, **kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 25\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39mcreate(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m     26\u001b[0m     \u001b[39mexcept\u001b[39;00m TryAgain \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     27\u001b[0m         \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m time\u001b[39m.\u001b[39mtime() \u001b[39m>\u001b[39m start \u001b[39m+\u001b[39m timeout:\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\AppData\\Local\\anaconda3\\envs\\openai\\lib\\site-packages\\openai\\api_resources\\abstract\\engine_api_resource.py:153\u001b[0m, in \u001b[0;36mEngineAPIResource.create\u001b[1;34m(cls, api_key, api_base, api_type, request_id, api_version, organization, **params)\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[0;32m    128\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcreate\u001b[39m(\n\u001b[0;32m    129\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    136\u001b[0m     \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams,\n\u001b[0;32m    137\u001b[0m ):\n\u001b[0;32m    138\u001b[0m     (\n\u001b[0;32m    139\u001b[0m         deployment_id,\n\u001b[0;32m    140\u001b[0m         engine,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    150\u001b[0m         api_key, api_base, api_type, api_version, organization, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams\n\u001b[0;32m    151\u001b[0m     )\n\u001b[1;32m--> 153\u001b[0m     response, _, api_key \u001b[39m=\u001b[39m requestor\u001b[39m.\u001b[39;49mrequest(\n\u001b[0;32m    154\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mpost\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    155\u001b[0m         url,\n\u001b[0;32m    156\u001b[0m         params\u001b[39m=\u001b[39;49mparams,\n\u001b[0;32m    157\u001b[0m         headers\u001b[39m=\u001b[39;49mheaders,\n\u001b[0;32m    158\u001b[0m         stream\u001b[39m=\u001b[39;49mstream,\n\u001b[0;32m    159\u001b[0m         request_id\u001b[39m=\u001b[39;49mrequest_id,\n\u001b[0;32m    160\u001b[0m         request_timeout\u001b[39m=\u001b[39;49mrequest_timeout,\n\u001b[0;32m    161\u001b[0m     )\n\u001b[0;32m    163\u001b[0m     \u001b[39mif\u001b[39;00m stream:\n\u001b[0;32m    164\u001b[0m         \u001b[39m# must be an iterator\u001b[39;00m\n\u001b[0;32m    165\u001b[0m         \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(response, OpenAIResponse)\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\AppData\\Local\\anaconda3\\envs\\openai\\lib\\site-packages\\openai\\api_requestor.py:230\u001b[0m, in \u001b[0;36mAPIRequestor.request\u001b[1;34m(self, method, url, params, headers, files, stream, request_id, request_timeout)\u001b[0m\n\u001b[0;32m    209\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrequest\u001b[39m(\n\u001b[0;32m    210\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m    211\u001b[0m     method,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    218\u001b[0m     request_timeout: Optional[Union[\u001b[39mfloat\u001b[39m, Tuple[\u001b[39mfloat\u001b[39m, \u001b[39mfloat\u001b[39m]]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    219\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tuple[Union[OpenAIResponse, Iterator[OpenAIResponse]], \u001b[39mbool\u001b[39m, \u001b[39mstr\u001b[39m]:\n\u001b[0;32m    220\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrequest_raw(\n\u001b[0;32m    221\u001b[0m         method\u001b[39m.\u001b[39mlower(),\n\u001b[0;32m    222\u001b[0m         url,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    228\u001b[0m         request_timeout\u001b[39m=\u001b[39mrequest_timeout,\n\u001b[0;32m    229\u001b[0m     )\n\u001b[1;32m--> 230\u001b[0m     resp, got_stream \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response(result, stream)\n\u001b[0;32m    231\u001b[0m     \u001b[39mreturn\u001b[39;00m resp, got_stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi_key\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\AppData\\Local\\anaconda3\\envs\\openai\\lib\\site-packages\\openai\\api_requestor.py:624\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response\u001b[1;34m(self, result, stream)\u001b[0m\n\u001b[0;32m    616\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[0;32m    617\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_interpret_response_line(\n\u001b[0;32m    618\u001b[0m             line, result\u001b[39m.\u001b[39mstatus_code, result\u001b[39m.\u001b[39mheaders, stream\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    619\u001b[0m         )\n\u001b[0;32m    620\u001b[0m         \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m parse_stream(result\u001b[39m.\u001b[39miter_lines())\n\u001b[0;32m    621\u001b[0m     ), \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    622\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    623\u001b[0m     \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m--> 624\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpret_response_line(\n\u001b[0;32m    625\u001b[0m             result\u001b[39m.\u001b[39;49mcontent\u001b[39m.\u001b[39;49mdecode(\u001b[39m\"\u001b[39;49m\u001b[39mutf-8\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m    626\u001b[0m             result\u001b[39m.\u001b[39;49mstatus_code,\n\u001b[0;32m    627\u001b[0m             result\u001b[39m.\u001b[39;49mheaders,\n\u001b[0;32m    628\u001b[0m             stream\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m,\n\u001b[0;32m    629\u001b[0m         ),\n\u001b[0;32m    630\u001b[0m         \u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    631\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\hyssh\\AppData\\Local\\anaconda3\\envs\\openai\\lib\\site-packages\\openai\\api_requestor.py:687\u001b[0m, in \u001b[0;36mAPIRequestor._interpret_response_line\u001b[1;34m(self, rbody, rcode, rheaders, stream)\u001b[0m\n\u001b[0;32m    685\u001b[0m stream_error \u001b[39m=\u001b[39m stream \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39merror\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m resp\u001b[39m.\u001b[39mdata\n\u001b[0;32m    686\u001b[0m \u001b[39mif\u001b[39;00m stream_error \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m rcode \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 687\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle_error_response(\n\u001b[0;32m    688\u001b[0m         rbody, rcode, resp\u001b[39m.\u001b[39mdata, rheaders, stream_error\u001b[39m=\u001b[39mstream_error\n\u001b[0;32m    689\u001b[0m     )\n\u001b[0;32m    690\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
-      "\u001b[1;31mInvalidRequestError\u001b[0m: 5.0 is greater than the maximum of 2 - 'temperature'"
-     ]
+     "data": {
+      "text/markdown": [
+       "### Relationship between people and organization\n",
+       "\n",
+       "Nicolas Cage is a key figure in this case. He has a dual role, serving as the President of the ABCD Cardiology Association and as a member of the ABCD Ministry of Health Formulary Committee. The technology company, represented by an unknown entity, has had multiple calls with Nicolas Cage and has made sponsorship payments to the ABCD Cardiology Association. \n",
+       "\n",
+       "The relationship can be visualized as follows:\n",
+       "\n",
+       "```\n",
+       "Nicolas Cage --- President of ---> ABCD Cardiology Association\n",
+       "       |                             |\n",
+       "       |                             |\n",
+       "       V                             V\n",
+       "Technology Company --- Sponsorship Payments ---> ABCD Cardiology Association\n",
+       "       |\n",
+       "       |\n",
+       "       V\n",
+       "Nicolas Cage --- Member of ---> ABCD Ministry of Health Formulary Committee\n",
+       "```\n",
+       "\n",
+       "### Classification of the case\n",
+       "\n",
+       "This case has potential compliance issues. The timing of the sponsorship payments to the ABCD Cardiology Association, the calls with Nicolas Cage, and the approval of a new indication for XYZ cardiology medicine by the ABCD Ministry of Health Formulary Committee could suggest a potential bribery or corruption issue. \n",
+       "\n",
+       "The event is classified as a potential compliance issue from the point where Nicolas Cage becomes a member of the ABCD Ministry of Health Formulary Committee and the company continues to make sponsorship payments to the ABCD Cardiology Association. The improper behavior at the ABCD Cardiology Association event further raises concerns about the nature of the relationship between the company and Nicolas Cage.\n",
+       "\n",
+       "### Results\n",
+       "\n",
+       "Risk level: 8/10\n",
+       "\n",
+       "This case presents a high risk due to the potential for bribery or corruption. The timing and nature of the interactions between the company and Nicolas Cage, coupled with his influential positions in both the ABCD Cardiology Association and the ABCD Ministry of Health Formulary Committee, raise significant compliance concerns."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "system_msg4 = {\"role\":\"system\",\"content\":system_message3}\n",
     "user_msg4 = {\"role\":\"user\",\"content\":user_prompt3.replace(\"{{case_data}}\", sample_case)}\n",
     "prompt4 = [system_msg4, user_msg4]\n",
-    "res4 = utils.run(prompt4, temperature=5.0, max_tokens=1000, top_p=0.0)\n",
+    "res4 = utils.run(prompt4, temperature=0.5, max_tokens=1000, top_p=0.0)\n",
     "display(Markdown(res4))"
    ]
   },
@@ -429,7 +450,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# End of noteook"
+   ]
   }
  ],
  "metadata": {
