change folder name

--- a/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
+++ b/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
@@ -123,11 +123,15 @@
       "* Organization names: Microsoft Corp, OpenAI, Reuters\n",
       "* Organization industries: Technology, News Media\n",
       "* People\n",
-      " * Name: Sam Altman, Peter Thiel, Reid Hoffman, Stephen Nellis, Peter Cooney\n",
-      " * Organization: OpenAI, LinkedIn, Reuters\n",
+      "    * Name: Sam Altman\n",
+      "    * Organization: OpenAI\n",
+      "    * Name: Peter Thiel\n",
+      "    * Organization: OpenAI\n",
+      "    * Name: Reid Hoffman\n",
+      "    * Organization: LinkedIn\n",
       "* Events\n",
       "    * Event name: Microsoft's investment in OpenAI\n",
-      "    * Event date and/or time: Not specified\n",
+      "    * Event date and/or time: Monday (exact date not specified)\n",
       "    * Event location: San Francisco\n"
      ]
     }
@@ -180,7 +184,7 @@
       "    ],\n",
       "    \"Events\":[\n",
       "        {\n",
-      "            \"Name\":\"Investment Announcement\",\n",
+      "            \"Name\":\"Investment\",\n",
       "            \"Date\":\"Unknown\",\n",
       "            \"Location\":\"San Francisco\"\n",
       "        }\n",
@@ -267,7 +271,7 @@
     "prompt2 = [system_msg2, user_msg2]\n",
     "res2 = utils.run(prompt2, temperature=0.0, max_tokens=2500, top_p=0.0)\n",
     "result2 = res2.split(\"```\")[1]\n",
-    "print(result2)"
+    "display(Markdown((\"```json\", result2, \"```\")))"
    ]
   },
   {
@@ -325,9 +329,9 @@
       "text/markdown": [
        "### Relationship between People and Organization\n",
        "\n",
-       "In this case, we have two organizations involved: Microsoft Corp and OpenAI. Microsoft Corp is a technology company that announced a $1 billion investment in OpenAI, a San Francisco-based company focusing on artificial intelligence.\n",
+       "In this case, we have two organizations: Microsoft Corp and OpenAI. Microsoft Corp is a technology company that has announced a $1 billion investment in OpenAI, which is an artificial intelligence company based in San Francisco. \n",
        "\n",
-       "Three individuals are mentioned in the case: Sam Altman, Peter Thiel, and Reid Hoffman. All three are associated with OpenAI.\n",
+       "The people involved in this case are Sam Altman, Peter Thiel, and Reid Hoffman, all of whom are associated with OpenAI. \n",
        "\n",
        "The relationship can be visualized as follows:\n",
        "\n",
@@ -337,18 +341,16 @@
        "                                               |\n",
        "                                               |\n",
        "                                               V\n",
-       "                                  Sam Altman, Peter Thiel, Reid Hoffman\n",
+       "Sam Altman, Peter Thiel, Reid Hoffman (Associated with OpenAI)\n",
        "```\n",
        "\n",
        "### Classification of the Case\n",
        "\n",
-       "This case does not appear to involve any anti-bribery or anti-corruption issues. The event described is a legitimate business transaction: an investment by Microsoft Corp in OpenAI to develop artificial intelligence technologies. There is no indication of any illicit activities or violations of compliance regulations.\n",
+       "This case does not appear to have any potential compliance issues related to anti-bribery and anti-corruption. The event described is a legitimate business transaction where Microsoft Corp is investing in OpenAI to develop artificial intelligence supercomputing technologies. There is no indication of any illicit activities or unethical behavior.\n",
        "\n",
        "### Results\n",
        "\n",
-       "Risk level: 0/10\n",
-       "\n",
-       "This case does not present a compliance issue."
+       "Risk level: 0/10 (No risk)"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -401,33 +403,27 @@
       "text/markdown": [
        "### Relationship between people and organization\n",
        "\n",
-       "Nicolas Cage is a key figure in this case. He has a dual role, serving as the President of the ABCD Cardiology Association and as a member of the ABCD Ministry of Health Formulary Committee. The technology company, represented by an unknown entity, has had multiple calls with Nicolas Cage and has made sponsorship payments to the ABCD Cardiology Association. \n",
+       "Nicolas Cage is a key figure in this case. He has a dual role, serving as the President of the ABCD Cardiology Association and as a member of the ABCD Ministry of Health Formulary Committee. The technology company, represented by an unknown party, has had multiple calls with Nicolas Cage and has made several sponsorship payments to the ABCD Cardiology Association.\n",
        "\n",
        "The relationship can be visualized as follows:\n",
        "\n",
        "```\n",
-       "Nicolas Cage --- President of ---> ABCD Cardiology Association\n",
-       "       |                             |\n",
-       "       |                             |\n",
-       "       V                             V\n",
-       "Technology Company --- Sponsorship Payments ---> ABCD Cardiology Association\n",
+       "Nicolas Cage --- ABCD Cardiology Association <--- Technology Company\n",
        "       |\n",
        "       |\n",
        "       V\n",
-       "Nicolas Cage --- Member of ---> ABCD Ministry of Health Formulary Committee\n",
+       "ABCD Ministry of Health Formulary Committee\n",
        "```\n",
        "\n",
        "### Classification of the case\n",
        "\n",
-       "This case has potential compliance issues. The timing of the sponsorship payments to the ABCD Cardiology Association, the calls with Nicolas Cage, and the approval of a new indication for XYZ cardiology medicine by the ABCD Ministry of Health Formulary Committee could suggest a potential bribery or corruption issue. \n",
-       "\n",
-       "The event is classified as a potential compliance issue from the point where Nicolas Cage becomes a member of the ABCD Ministry of Health Formulary Committee and the company continues to make sponsorship payments to the ABCD Cardiology Association. The improper behavior at the ABCD Cardiology Association event further raises concerns about the nature of the relationship between the company and Nicolas Cage.\n",
+       "This case has potential compliance issues. The timing of the sponsorship payments to the ABCD Cardiology Association, the calls with Nicolas Cage, and the approval of a new indication for XYZ cardiology medicine by the ABCD Ministry of Health Formulary Committee could suggest a potential bribery or corruption case. The improper behavior at the ABCD Cardiology Association event could also be a red flag.\n",
        "\n",
        "### Results\n",
        "\n",
-       "Risk level: 8/10\n",
+       "Risk level: 7/10\n",
        "\n",
-       "This case presents a high risk due to the potential for bribery or corruption. The timing and nature of the interactions between the company and Nicolas Cage, coupled with his influential positions in both the ABCD Cardiology Association and the ABCD Ministry of Health Formulary Committee, raise significant compliance concerns."
+       "The risk level is relatively high due to the potential for bribery or corruption. The timing of the events and the dual role of Nicolas Cage in both the ABCD Cardiology Association and the ABCD Ministry of Health Formulary Committee raise concerns about potential conflicts of interest and improper influence. Further investigation is needed to confirm these suspicions."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -441,7 +437,7 @@
     "system_msg4 = {\"role\":\"system\",\"content\":system_message3}\n",
     "user_msg4 = {\"role\":\"user\",\"content\":user_prompt3.replace(\"{{case_data}}\", sample_case)}\n",
     "prompt4 = [system_msg4, user_msg4]\n",
-    "res4 = utils.run(prompt4, temperature=0.5, max_tokens=1000, top_p=0.0)\n",
+    "res4 = utils.run(prompt4, temperature=1.0, max_tokens=1000, top_p=0.0)\n",
     "display(Markdown(res4))"
    ]
   },
