add speech coach demo

--- a/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
+++ b/quickstart-learnfast/risk-analysis/risk-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
       "\n",
       "Extracted Data\n",
       "* Title: Microsoft to invest $1 billion in OpenAI | Reuters\n",
-      "* Summary: Microsoft Corp announced a $1 billion investment in San Francisco-based OpenAI, forming a multi-year partnership to develop artificial intelligence supercomputing technologies on Microsoft’s Azure cloud computing service. OpenAI, founded in 2015, has been working on advances in AI and focuses on the safety and social implications of AI. The Microsoft investment will help OpenAI pursue “artificial general intelligence,” or AGI. The two companies will jointly build new AI technologies on Microsoft’s Azure cloud computing service.\n",
+      "* Summary: Microsoft Corp announced its investment of $1 billion in San Francisco-based OpenAI. The two companies have formed a multi-year partnership to develop artificial intelligence supercomputing technologies on Microsoft’s Azure cloud computing service. OpenAI was founded in 2015 as a nonprofit with $1 billion in funding from Silicon Valley investors. The group has been focusing on the safety and social implications of AI. The Microsoft investment would help OpenAI pursue “artificial general intelligence,” or AGI.\n",
       "* Organization names: Microsoft Corp, OpenAI, Reuters\n",
       "* Organization industries: Technology, News Media\n",
       "* People\n",
@@ -128,7 +128,9 @@
       "    * Name: Peter Thiel\n",
       "    * Organization: OpenAI\n",
       "    * Name: Reid Hoffman\n",
-      "    * Organization: LinkedIn\n",
+      "    * Organization: OpenAI\n",
+      "    * Name: Stephen Nellis\n",
+      "    * Organization: Reuters\n",
       "* Events\n",
       "    * Event name: Microsoft's investment in OpenAI\n",
       "    * Event date and/or time: Monday (exact date not specified)\n",
@@ -150,48 +152,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "{\n",
-      "    \"SourceType\":\"WebPage\",\n",
-      "    \"Title\": \"Microsoft to invest $1 billion in OpenAI | Reuters\",\n",
-      "    \"Summary\":\"Microsoft Corp announced a $1 billion investment in San Francisco-based OpenAI. The two companies have formed a multi-year partnership to develop artificial intelligence supercomputing technologies on Microsoft’s Azure cloud computing service. OpenAI was founded in 2015 and has been focusing on the safety and social implications of AI. The Microsoft investment will help OpenAI pursue 'artificial general intelligence' (AGI).\",\n",
-      "    \"Organizations\":[\n",
-      "        {\n",
-      "            \"Name\":\"Microsoft Corp\",\n",
-      "            \"Industry\":\"Technology\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"Name\":\"OpenAI\",\n",
-      "            \"Industry\":\"Artificial Intelligence\"\n",
-      "        }\n",
-      "    ],\n",
-      "    \"People\":[\n",
-      "        {\n",
-      "            \"Name\":\"Sam Altman\",\n",
-      "            \"Organization\":\"OpenAI\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"Name\":\"Peter Thiel\",\n",
-      "            \"Organization\":\"OpenAI\"\n",
-      "        },\n",
-      "        {\n",
-      "            \"Name\":\"Reid Hoffman\",\n",
-      "            \"Organization\":\"OpenAI\"\n",
-      "        }\n",
-      "    ],\n",
-      "    \"Events\":[\n",
-      "        {\n",
-      "            \"Name\":\"Investment\",\n",
-      "            \"Date\":\"Unknown\",\n",
-      "            \"Location\":\"San Francisco\"\n",
-      "        }\n",
-      "    ]\n",
-      "}\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n{\\n    \"SourceType\":\"WebPage\",\\n    \"Title\": \"Microsoft to invest $1 billion in OpenAI | Reuters\",\\n    \"Summary\":\"Microsoft Corp announced a $1 billion investment in San Francisco-based OpenAI. The two companies have formed a multi-year partnership to develop artificial intelligence supercomputing technologies on Microsoft’s Azure cloud computing service. OpenAI was founded in 2015 and has been focusing on the safety and social implications of AI. The Microsoft investment will help OpenAI pursue \\'artificial general intelligence\\' (AGI).\",\\n    \"Organizations\":[\\n        {\\n            \"Name\":\"Microsoft Corp\",\\n            \"Industry\":\"Technology\"\\n        },\\n        {\\n            \"Name\":\"OpenAI\",\\n            \"Industry\":\"Artificial Intelligence\"\\n        }\\n    ],\\n    \"People\":[\\n        {\\n            \"Name\":\"Sam Altman\",\\n            \"Organization\":\"OpenAI\"\\n        },\\n        {\\n            \"Name\":\"Peter Thiel\",\\n            \"Organization\":\"OpenAI\"\\n        },\\n        {\\n            \"Name\":\"Reid Hoffman\",\\n            \"Organization\":\"OpenAI\"\\n        }\\n    ],\\n    \"Events\":[\\n        {\\n            \"Name\":\"Investment\",\\n            \"Date\":\"Not specified\",\\n            \"Location\":\"San Francisco\"\\n        }\\n    ]\\n}\\n'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'```'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -271,7 +247,7 @@
     "prompt2 = [system_msg2, user_msg2]\n",
     "res2 = utils.run(prompt2, temperature=0.0, max_tokens=2500, top_p=0.0)\n",
     "result2 = res2.split(\"```\")[1]\n",
-    "display(Markdown((\"```json\", result2, \"```\")))"
+    "display(result2, \"```\")"
    ]
   },
   {
@@ -329,7 +305,7 @@
       "text/markdown": [
        "### Relationship between People and Organization\n",
        "\n",
-       "In this case, we have two organizations: Microsoft Corp and OpenAI. Microsoft Corp is a technology company that has announced a $1 billion investment in OpenAI, which is an artificial intelligence company based in San Francisco. \n",
+       "In this case, the organizations involved are Microsoft Corp and OpenAI. Microsoft Corp is a technology company that announced a $1 billion investment in OpenAI, a San Francisco-based company focusing on the safety and social implications of AI. \n",
        "\n",
        "The people involved in this case are Sam Altman, Peter Thiel, and Reid Hoffman, all of whom are associated with OpenAI. \n",
        "\n",
@@ -341,12 +317,12 @@
        "                                               |\n",
        "                                               |\n",
        "                                               V\n",
-       "Sam Altman, Peter Thiel, Reid Hoffman (Associated with OpenAI)\n",
+       "                                  Sam Altman, Peter Thiel, Reid Hoffman\n",
        "```\n",
        "\n",
        "### Classification of the Case\n",
        "\n",
-       "This case does not appear to have any potential compliance issues related to anti-bribery and anti-corruption. The event described is a legitimate business transaction where Microsoft Corp is investing in OpenAI to develop artificial intelligence supercomputing technologies. There is no indication of any illicit activities or unethical behavior.\n",
+       "This case does not present any potential compliance issues. The event described is a legitimate business transaction where Microsoft Corp is investing in OpenAI to develop artificial intelligence supercomputing technologies. There is no mention of any illegal activities, bribery, or corruption.\n",
        "\n",
        "### Results\n",
        "\n",
@@ -395,35 +371,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "### Relationship between people and organization\n",
+       "### Relationship between People and Organization\n",
        "\n",
-       "Nicolas Cage is a key figure in this case. He has a dual role, serving as the President of the ABCD Cardiology Association and as a member of the ABCD Ministry of Health Formulary Committee. The technology company, represented by an unknown party, has had multiple calls with Nicolas Cage and has made several sponsorship payments to the ABCD Cardiology Association.\n",
+       "Nicolas Cage is a key figure in this case. He is the President of the ABCD Cardiology Association and later becomes a member of the ABCD Ministry of Health Formulary Committee. The technology company in question has had multiple calls with Nicolas Cage and has made sponsorship payments to the ABCD Cardiology Association. \n",
        "\n",
        "The relationship can be visualized as follows:\n",
        "\n",
        "```\n",
-       "Nicolas Cage --- ABCD Cardiology Association <--- Technology Company\n",
+       "Nicolas Cage --- President of ---> ABCD Cardiology Association\n",
+       "       |                                 |\n",
+       "       |                                 |\n",
+       "       V                                 V\n",
+       "Technology Company --- Sponsorship Payments ---> ABCD Cardiology Association\n",
        "       |\n",
        "       |\n",
        "       V\n",
-       "ABCD Ministry of Health Formulary Committee\n",
+       "Nicolas Cage --- Member of ---> ABCD Ministry of Health Formulary Committee\n",
        "```\n",
        "\n",
-       "### Classification of the case\n",
+       "### Classification of the Case\n",
        "\n",
-       "This case has potential compliance issues. The timing of the sponsorship payments to the ABCD Cardiology Association, the calls with Nicolas Cage, and the approval of a new indication for XYZ cardiology medicine by the ABCD Ministry of Health Formulary Committee could suggest a potential bribery or corruption case. The improper behavior at the ABCD Cardiology Association event could also be a red flag.\n",
+       "This case has potential compliance issues. The technology company has made multiple sponsorship payments to the ABCD Cardiology Association, where Nicolas Cage is the President. Later, Nicolas Cage becomes a member of the ABCD Ministry of Health Formulary Committee, which approves a new indication for a cardiology medicine. This sequence of events raises questions about potential bribery and corruption, as the payments could be seen as an attempt to influence the decision of the Formulary Committee.\n",
        "\n",
        "### Results\n",
        "\n",
-       "Risk level: 7/10\n",
+       "Risk level: 8/10\n",
        "\n",
-       "The risk level is relatively high due to the potential for bribery or corruption. The timing of the events and the dual role of Nicolas Cage in both the ABCD Cardiology Association and the ABCD Ministry of Health Formulary Committee raise concerns about potential conflicts of interest and improper influence. Further investigation is needed to confirm these suspicions."
+       "The risk level is high due to the potential for bribery and corruption. The timing of the sponsorship payments, the calls with Nicolas Cage, and the approval of the new indication for the cardiology medicine suggest a possible quid pro quo arrangement. This could lead to significant legal and reputational risks for the technology company."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -443,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
