GPT Function Calling

--- a/quickstart-learnfast/chromaDB/getStart_ChromaDB.ipynb
+++ b/quickstart-learnfast/chromaDB/getStart_ChromaDB.ipynb
@@ -29,6 +29,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change default distance function\n",
+    "\n",
+    "```python\n",
+    " collection = client.create_collection(\n",
+    "        name=\"collection_name\",\n",
+    "        metadata={\"hnsw:space\": \"cosine\"} # l2 is the default\n",
+    "    )\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
